<resources>
    <string name="app_name">singbar</string>
      <string name="geci">曾经的你 - 许巍

                                       曾梦想仗剑走天涯

                                       看一看世界的繁华

                                       年少的心总有些轻狂

                                       如今你四海为家

                                       曾让你心疼的姑娘

                                       如今已悄然无踪影

                                       爱情总让你渴望又感到烦恼

                                       曾让你遍体鳞伤</string>


    <!--注册-->
    <string name="register_title">手机号仅用于登录和账号安全，不向其他用户公开</string>
    <string name="register_account">中国大陆+86</string>
    <string name="register_account_hint">请输入您的手机号</string>
    <string name="register_user_service">我已阅读并同意用户服务协议</string>
    <!--找回密码-->
    <string name="find_auth">1.安全验证</string>
    <string name="find_new_pw">2.设置新密码</string>
    <string name="find_success">3.修改成功</string>
    <!--login-->
    <string name="login_account_hint">请输入账号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_btn_text">登  录</string>
    <string name="login_tv_register">注册账号</string>
    <string name="login_tv_findbackPW">找回密码?</string>
    <string name="login_tv_anotherway_login">其它方式登录</string>

    <!--layout_home_bottom-->
    <string name="layout_bottom_home">首页</string>
    <string name="layout_bottom_list">榜单</string>
    <string name="layout_bottom_trends">动态</string>
    <string name="layout_bottom_mine">我的</string>

    <!--pop_song-->
    <string name="pop_song_query_hint">歌曲名、歌手名、首字母</string>


    <!--我的页面-->
    <string name="mine_title">我的</string>
    <string name="mine_type_opus">作品</string>
    <string name="mine_type_attention">关注</string>
    <string name="mine_type_fans">粉丝</string>
</resources>
