<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/denglu"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"></LinearLayout>

    <LinearLayout
        android:id="@+id/ll_main_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/shape_login_edit_bg"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_login_inputAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/login_account_hint"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyz.?"
            android:inputType="textPhonetic"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:textColorHint="@color/login_div_or_text_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/login_div_or_text_color" />

        <EditText
            android:id="@+id/et_login_inputPW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:textColorHint="@color/login_div_or_text_color" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:background="@drawable/selector_login_btn_click"
        android:text="@string/login_btn_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_login_registerAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:clickable="true"
            android:layout_marginRight="45dp"
            android:padding="5dp"
            android:text="@string/login_tv_register"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_login_findBackPW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:clickable="true"
            android:text="@string/login_tv_findbackPW"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_tv_anotherway_login"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="2"
        android:orientation="horizontal"></LinearLayout>

</LinearLayout>
