<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/white">

    <RadioGroup
        android:id="@+id/rg_home_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iv_bottom_center"
        android:background="@color/home_bottom_rg_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/selector_bottom_home"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/layout_bottom_home"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rb_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/selector_bottom_list"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/layout_bottom_list"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rb_trends"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/selector_bottom_trends"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/layout_bottom_trends"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rb_mine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/selector_bottom_mine"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/layout_bottom_mine"
            android:textColor="@color/white" />
    </RadioGroup>
</RelativeLayout>