<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/bg"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_register"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/register_title"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/register_account"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/mine_query_pressed" />

            <EditText
                android:id="@+id/et_register_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/register_account_hint"
                android:inputType="number"
                android:maxLength="11"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColorHint="@color/mine_query_pressed"
                android:textSize="14sp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_register_agree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/register_user_service"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_register_proving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/login_div_or_text_color"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
            android:padding="15dp"
            android:text="验证手机号"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>