<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pop_song_top"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_top_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/mine_title"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/mine_bg" />

        <LinearLayout
            android:id="@+id/ll_mine_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_mine_user_head"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:background="@drawable/shape_mine_user_head"
                android:scaleType="centerCrop"
                android:src="@mipmap/health_guide_men_selected" />

            <TextView
                android:id="@+id/tv_mine_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_mine_user_head"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="yonghuid"
                android:textColor="@color/home_bottom_text_checked_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_mine_design"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_mine_user_head"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="个性签名"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_mine_listenCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_mine_user"
                    android:layout_centerHorizontal="true"
                    android:drawableLeft="@mipmap/icon_listen"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="12345"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_mine_callName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_mine_user"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:text="歌唱达人"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <RadioGroup
        android:id="@+id/rg_mine"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_mine_opus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_mine_test_style"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/mine_type_opus"
            android:textColor="@color/mine_style_text_color"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_mine_attention"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_mine_test_style"
            android:button="@null"
            android:gravity="center"
            android:text="@string/mine_type_attention"
            android:textColor="@color/mine_style_text_color"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_mine_fans"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_mine_test_style"
            android:button="@null"
            android:gravity="center"
            android:text="@string/mine_type_fans"
            android:textColor="@color/mine_style_text_color"
            android:textSize="20sp" />
    </RadioGroup>

    <RelativeLayout
        android:id="@+id/ll_mine_show"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@color/mine_item_fl_bg"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lv_mine_opus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/layout_query"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:divider="@color/mine_item_fl_bg"
            android:dividerHeight="10dp"></ListView>

        <TextView
            android:id="@+id/tv_mine_noProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:drawableTop="@mipmap/icon_opus"
            android:text="您当前还没有任何作品"
            android:textColor="@color/mine_style_text_color"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>